--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
               id="input_text"
               class="input__text input__text__placeholder"
               placeholder="Start typing here.."
+              autocomplete="off"
             />
           </div>
           <div class="redo">
-            <button class="btn__redo">Redo</button>
+            <button class="btn__redo">Restart</button>
           </div>
         </div>
       </div>
