--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             />
           </div>
           <div class="redo">
-            <button class="btn__redo">Restart</button>
+            <button class="btn__redo">Redo</button>
           </div>
         </div>
       </div>
