--- a/index.html
+++ b/index.html
@@ -16,43 +16,54 @@
     <title>Clickety Clacker</title>
   </head>
   <body>
-    <div class="main__container">
-      <h1 class="title">Clickety Clacker</h1>
-      <div class="main__area">
-        <section class="text__area">
-          <div id="text__generate">
-            <p class="text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
-              eum illum deleniti dolore tenetur nulla explicabo reprehenderit
-              numquam. Nulla, assumenda natus earum officia minus culpa aperiam
-              adipisci libero qui vitae.
-            </p>
-          </div>
-        </section>
-        <div class="typing__area">
-          <div class="type">
-            <input
-              id="input_text"
-              class="input__text input__text__placeholder"
-              placeholder="Start typing here..."
-              autocomplete="off"
-            />
-          </div>
-          <div class="redo">
-            <button class="btn__redo">
-              <ion-icon name="refresh-outline" class="reload__icon"></ion-icon>
-            </button>
+    <div class="body__container">
+      <span class="theme__selection__text">Press Enter to select</span>
+      <span class="theme__name theme__name0">default</span>
+      <span class="theme__name theme__name1">chocolate</span>
+      <div class="main__container">
+        <button class="theme__button">Theme: default</button>
+        <h1 class="title">Clickety Clacker</h1>
+        <div class="main__area">
+          <section class="text__area">
+            <div id="text__generate">
+              <p class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Delectus, eum illum deleniti dolore tenetur nulla explicabo
+                reprehenderit numquam. Nulla, assumenda natus earum officia
+                minus culpa aperiam adipisci libero qui vitae.
+              </p>
+            </div>
+          </section>
+          <div class="typing__area">
+            <div class="type">
+              <input
+                id="input_text"
+                class="input__text input__text__placeholder"
+                placeholder="Start typing here..."
+                spellcheck="false"
+                autocomplete="off"
+                autocorrect="off"
+              />
+            </div>
+            <div class="btn">
+              <button class="btn__redo">
+                <ion-icon
+                  name="refresh-outline"
+                  class="reload__icon"
+                ></ion-icon>
+              </button>
+            </div>
           </div>
         </div>
       </div>
+      <script
+        type="module"
+        src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+      ></script>
+      <script
+        nomodule
+        src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+      ></script>
     </div>
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script>
   </body>
 </html>
