--- a/index.html
+++ b/index.html
@@ -17,9 +17,16 @@
   </head>
   <body>
     <div class="body__container">
-      <span class="theme__selection__text">Press Enter to select</span>
+      <button class="left__arrow">
+        <ion-icon name="arrow-back-outline" class="arrow__icon"></ion-icon>
+      </button>
+      <button class="right__arrow">
+        <ion-icon name="arrow-forward-outline" class="arrow__icon"></ion-icon>
+      </button>
+      <!-- <span class="theme__selection__text">Press Enter to select</span> -->
       <span class="theme__name theme__name0">default</span>
       <span class="theme__name theme__name1">chocolate</span>
+      <span class="theme__name theme__name2">synthwave</span>
       <div class="main__container">
         <button class="theme__button">Theme: default</button>
         <h1 class="title">Clickety Clacker</h1>
