--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
         <ion-icon name="arrow-forward-outline" class="arrow__icon"></ion-icon>
       </button>
       <!-- <span class="theme__selection__text">Press Enter to select</span> -->
-      <span class="theme__name theme__name0">default</span>
+      <span class="theme__name theme__name0">dark</span>
       <span class="theme__name theme__name1">chocolate</span>
       <span class="theme__name theme__name2">synthwave</span>
+      <span class="theme__name theme__name3">matrix</span>
       <div class="main__container">
-        <button class="theme__button">Theme: default</button>
+        <button class="theme__button">Theme: dark</button>
         <h1 class="title">Clickety Clacker</h1>
         <div class="main__area">
           <section class="text__area">
